--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,30 @@
 # Site
-repository: sproogen/resume-theme
+repository:
 favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: David Oh
+title: Corporate System Engineer
+email: davidoh923@gmail.com
+website: www.github.com/davidoh923
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+github_username:  davidoh923
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+instagram_username: d0hgram
+linkedin_username: davidoh2
 # pinterest_username: jekyll
-youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name is David and I'm a Corporate System Engineer. To work diligently, improve knowledge and gain general experience in the industry. I am seeking a position where I can develop and excel while giving my best to an employer.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>AWS</mark> and <mark>Sleeping</mark>
 
 # Projects Section
 # projects_title: Projects
@@ -40,11 +38,10 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
+  Alongside my interests in systems and software engineering some of my other interests and hobbies are:
+   - Snowboarding
+   - Camping
    - Gaming
-   - Knitting
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
 # Footer
 footer_show_references: true
