--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,10 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: Quizlet
+  link: quizlet.com
+  job_title: Corporate System Engineer
+  dates: Feb 2020 - Present
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+   Helping students (and their teachers) practice and master whatever they are learning.
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    First member of Corporate System Engineering team. Playing my part to streamline systems and processes to be enterprise ready.
+    
